--- a/pages/index/addApply/addApply.json
+++ b/pages/index/addApply/addApply.json
@@ -1,7 +1,7 @@
 {
       "navigationBarBackgroundColor": "#ffffff",
       "navigationBarTextStyle": "black",
-      "navigationBarTitleText": "小程序",
+      "navigationBarTitleText": "添加事件",
       "backgroundColor": "#eeeeee",
       "backgroundTextStyle": "light",
       "enablePullDownRefresh": false
