--- a/app.json
+++ b/app.json
@@ -25,20 +25,20 @@
     "list": [
       {
         "pagePath": "pages/index/index",
-        "iconPath": "images/icon-home.png",
-        "selectedIconPath": "images/icon-home-active.png",
+        "iconPath": "images/shenqing-1.png",
+        "selectedIconPath": "images/shenqing-2.png",
         "text": "我的申请"
       },
       {
         "pagePath": "pages/verify/index",
-        "iconPath": "images/icon-product.png",
-        "selectedIconPath": "images/icon-product-active.png",
+        "iconPath": "images/shengpi-1.png",
+        "selectedIconPath": "images/shengpi-2.png",
         "text": "我的审批"
       },
       {
         "pagePath": "pages/query/index",
-        "iconPath": "images/icon-cart.png",
-        "selectedIconPath": "images/icon-cart-active.png",
+        "iconPath": "images/chaxun-1.png",
+        "selectedIconPath": "images/chaxun-2.png",
         "text": "我的查询"
       }
     ]
