--- a/app.json
+++ b/app.json
@@ -8,7 +8,8 @@
     "pages/index/fixSubmit/fixSubmit",
     "pages/verify/index",
     "pages/query/index",
-    "pages/query/dayReportDetail/dayReportDetail"
+    "pages/query/dayReportDetail/dayReportDetail",
+    "pages/account/account"
   ],
   "window": {
     "backgroundTextStyle": "dark",
